Ajout page Nettoyage Bellerive

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@ Hello i'm Phil Boivin!
           <h2>Quoi de neuf?</h2> 
 
           <ul class="list">
-          <li><a href="/blogue/2021-07-01-cerises.html">Cerises du Plateau</a> <span class="emoji">&#127826;</span></li>
-          <li><a href="editorial.html">Portfolio éditorial</a> à jour <span class="emoji">&#128247;</span></li>
-          <li><a href="blogue/2021-03-22-mab.html">Shooting photo chez le barbier</a> <span class="emoji">&#128136;</span></li>
+          <li><a href="/blogue/2021-08-07-nettoyage.html">Nettoyage au Parc de la Promenade-Bellerive</a></li>
+          <li><a href="/blogue/2021-07-01-cerises.html">Cerises du Plateau</a></li>
+          <li><a href="editorial.html">Portfolio éditorial</a> à jour</li>
           </ul>
         
 
