--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ Hello i'm Phil Boivin!
           <h2>Quoi de neuf?</h2> 
 
           <ul class="list">
+          <li><a href="https://www.lapresse.ca/voyage/quebec-et-canada/2021-09-03/la-lune-s-invite-aux-jardins-de-lumiere.php">La Presse : La lune s’invite aux Jardins de lumière</a></li>
           <li><a href="/blogue/2021-08-07-nettoyage.html">Nettoyage au Parc de la Promenade-Bellerive</a></li>
-          <li><a href="/blogue/2021-07-01-cerises.html">Cerises du Plateau</a></li>
           <li><a href="editorial.html">Portfolio éditorial</a> à jour</li>
           </ul>
         
