--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@ Hello i'm Phil Boivin!
           <h2>Quoi de neuf?</h2> 
 
           <ul class="list">
+          <li><a href="https://www.lapresse.ca/affaires/2021-09-09/quand-la-philanthropie-danse-avec-la-covid-19.php">La Presse : Quand la philanthropie danse avec la COVID-19</a>
           <li><a href="https://www.lapresse.ca/voyage/quebec-et-canada/2021-09-03/la-lune-s-invite-aux-jardins-de-lumiere.php">La Presse : La lune s’invite aux Jardins de lumière</a></li>
           <li><a href="/blogue/2021-08-07-nettoyage.html">Nettoyage au Parc de la Promenade-Bellerive</a></li>
-          <li><a href="editorial.html">Portfolio éditorial</a> à jour</li>
           </ul>
         
 
