Ajout liens publications

--- a/publications.html
+++ b/publications.html
@@ -36,12 +36,11 @@ Hello i'm Phil Boivin!
 
         <p>
           <ul class="list">
-            <li>La Presse - 9 septembre 2021 : <a href="https://www.lapresse.ca/affaires/2021-09-09/quand-la-philanthropie-danse-avec-la-covid-19.php">Quand la philanthropie danse avec la COVID-19</a>
-            <li>La Presse - 7 septembre 2021 : <a href="https://www.lapresse.ca/arts/musique/2021-09-07/metallica/le-black-album-vu-par.php">Metallica : Le Black Album vu par…</a>
+            <li>La Presse - 14 septembre 2021 : <a href="https://www.lapresse.ca/societe/2021-09-14/infertilite-traverser-la-tempete/une-impression-de-solitude.php">Infertilité : traverser la tempête</a></li>
+            <li>La Presse - 9 septembre 2021 : <a href="https://www.lapresse.ca/affaires/2021-09-09/quand-la-philanthropie-danse-avec-la-covid-19.php">Quand la philanthropie danse avec la COVID-19</a></li>
+            <li>La Presse - 7 septembre 2021 : <a href="https://www.lapresse.ca/arts/musique/2021-09-07/metallica/le-black-album-vu-par.php">Metallica : Le Black Album vu par…</a></li>
             <li>La Presse - 3 septembre 2021 : <a href="https://www.lapresse.ca/voyage/quebec-et-canada/2021-09-03/la-lune-s-invite-aux-jardins-de-lumiere.php">La lune s’invite aux Jardins de lumière</a></li>
-            <li>La Presse - 2 septembre 2021 : <a href="https://www.lapresse.ca/affaires/2021-09-02/assurances-collectives/les-assureurs-craignent-l-anxiete-liee-au-retour-au-bureau.php">Les assureurs craignent l’anxiété liée au retour au bureau</a>
-
-              
+            <li>La Presse - 2 septembre 2021 : <a href="https://www.lapresse.ca/affaires/2021-09-02/assurances-collectives/les-assureurs-craignent-l-anxiete-liee-au-retour-au-bureau.php">Les assureurs craignent l’anxiété liée au retour au bureau</a></li>
           </ul>
         </p>
 
