Update to publications

--- a/editorial.html
+++ b/editorial.html
@@ -35,7 +35,7 @@ Hello i'm Phil Boivin!
         <div class="col">
           <div id="menu-l2" class="sub-menu"></div>
           <h1>Editorial</h1>
-          <p>Quelques photos éditoriales et de presse concernant l’actualité.</p>
+          <p>Quelques photos éditoriales et de presse concernant l’actualité. Consultez mes dernières <a href="publications.html">publications</a>.</p>
         </div>
       </div>
 
