--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@ Hello i'm Phil Boivin!
       <div class="row">
         <div class="col">
 
-          <h1>Bonjour!</h1> 
+          <h1>Bonjour / Hi!</h1> 
           <p>
           Je suis Philippe. Un photographe, vidéaste et pilote de drone montréalais au service des humains (et de certains robots).
           <br>
           Je vous invite à visiter mon <a href="/portfolio.html">portfolio</a> pour en savoir plus.
+          <br>
+          (English version is coming soon!)
           </p>
      
         </div>
@@ -52,11 +54,9 @@ Hello i'm Phil Boivin!
           <h2>Quoi de neuf?</h2> 
 
           <ul class="list">
+            <li>Nouvelle section <a href="publications.html">Publications</a></li>
+            <li>Je suis disponible comme photojournaliste, <a href="contact.html">contactez-moi</a></li>
             <li>La Presse - 14 septembre : <a href="https://www.lapresse.ca/societe/2021-09-14/infertilite-traverser-la-tempete/une-impression-de-solitude.php">Infertilité : traverser la tempête</a></li>
-            <li>La Presse - 9 septembre : <a href="https://www.lapresse.ca/affaires/2021-09-09/quand-la-philanthropie-danse-avec-la-covid-19.php">Quand la philanthropie danse avec la COVID-19</a></li>
-            <li>La Presse - 7 septembre : <a href="https://www.lapresse.ca/arts/musique/2021-09-07/metallica/le-black-album-vu-par.php">Metallica : Le Black Album vu par…</a></li>
-            <li>La Presse - 3 septembre : <a href="https://www.lapresse.ca/voyage/quebec-et-canada/2021-09-03/la-lune-s-invite-aux-jardins-de-lumiere.php">La lune s’invite aux Jardins de lumière</a></li>
-            <li>La Presse - 2 septembre : <a href="https://www.lapresse.ca/affaires/2021-09-02/assurances-collectives/les-assureurs-craignent-l-anxiete-liee-au-retour-au-bureau.php">Les assureurs craignent l’anxiété liée au retour au bureau</a></li>
           </ul>
         
 
