--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Hello i'm Phil Boivin!
       <div class="row">
         <div class="col">
 
-          <h1>Bonjour / Hi!</h1> 
+          <h1>Bonjour / Hi</h1> 
           <p>
           Je suis Philippe. Un photographe, vidéaste et pilote de drone montréalais au service des humains (et de certains robots).
           <br>
