--- a/cv.html
+++ b/cv.html
@@ -41,7 +41,7 @@ Hello i'm Phil Boivin!
 
             <div class="col">
 
-              <p>Photographe, vidéaste et pilote de drone professionnel dans différents domaines, je couvre également l’actualité montréalaise à travers mes différents projets documentaires et éditoriaux. On dit de moi que je suis créatif, rigoureux et bien organisé.</p>
+              <p>Photographe, vidéaste et pilote de drone professionnel dans différents domaines, je couvre également l’actualité montréalaise à travers mes différentes assignations et projets. On dit de moi que je suis créatif, rigoureux et bien organisé.</p>
               
               <p>Passionné par l’image et le reportage sur le terrain, je m'investis dans chaque projet. Collaborer avec vous s’avèrerait une expérience à la fois hautement stimulante et gratifiante.</p>
 
@@ -55,7 +55,7 @@ Hello i'm Phil Boivin!
 
             <div class="col">
 
-              <p>I am a professional photographer, videographer and drone pilot that caters to different fields and industries. I also covers Montreal related news through various documentary and editorial projects.</p>
+              <p>Philippe Boivin is a professional photographer, videographer and drone pilot that caters to different fields and industries. He also covers Montreal related news through various assignments and editorial projects.</p>
 
               <p>Clients describe me as creative, rigorous and organized, and as someone that invests himself in each project with passion and dedication.</p>
 
