New photos Delices des dunes

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@ Hello i'm Phil Boivin!
           <h2>Quoi de neuf?</h2> 
 
           <ul class="list">
+            <li>Photos de la nouvelle épicerie <a href="blogue/2021-09-22-delices-des-dunes.html">Délices des Dunes</a></li>
             <li>Nouvelle section <a href="publications.html">Publications</a></li>
             <li>Je suis disponible comme photojournaliste, <a href="contact.html">contactez-moi</a></li>
-            <li>La Presse - 14 septembre : <a href="https://www.lapresse.ca/societe/2021-09-14/infertilite-traverser-la-tempete/une-impression-de-solitude.php">Infertilité : traverser la tempête</a></li>
           </ul>
         
 
