--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,8 @@ Hello i'm Phil Boivin!
 
         <p>
           <ul class="list">
-            <li>La Presse - 24 septembre 2021 : <a href="https://www.lapresse.ca/affaires/2021-09-24/primes-pour-les-infirmieres/les-agences-de-placement-sur-le-qui-vive.php">Les agences de placement sur le qui-vive</a>
+            <li>La Presse - 27 septembre 2021 : <a href="https://www.lapresse.ca/arts/theatre/2021-09-27/les-filles-du-saint-laurent-s-en-va-a-paris.php">Les filles du Saint-Laurent s’en va à Paris</a></li>
+            <li>La Presse - 24 septembre 2021 : <a href="https://www.lapresse.ca/affaires/2021-09-24/primes-pour-les-infirmieres/les-agences-de-placement-sur-le-qui-vive.php">Les agences de placement sur le qui-vive</a></li>
             <li>La Presse - 14 septembre 2021 : <a href="https://www.lapresse.ca/societe/2021-09-14/infertilite-traverser-la-tempete/une-impression-de-solitude.php">Infertilité : traverser la tempête</a></li>
             <li>La Presse - 9 septembre 2021 : <a href="https://www.lapresse.ca/affaires/2021-09-09/quand-la-philanthropie-danse-avec-la-covid-19.php">Quand la philanthropie danse avec la COVID-19</a></li>
             <li>La Presse - 7 septembre 2021 : <a href="https://www.lapresse.ca/arts/musique/2021-09-07/metallica/le-black-album-vu-par.php">Metallica : Le Black Album vu par…</a></li>
