--- a/publications.html
+++ b/publications.html
@@ -37,6 +37,9 @@ Hello i'm Phil Boivin!
 
         <p>
           <ul class="list">
+
+            <li>La Presse - 2 octobre 2021 : <a href="https://www.lapresse.ca/covid-19/2021-10-02/les-canadiens-appuient-massivement-le-passeport-vaccinal.php">Les Canadiens appuient massivement le passeport vaccinal</a></li>
+            <li>La Presse - 2 octobre 2021 : <a href="https://www.lapresse.ca/arts/musique/2021-10-02/les-nouveaux-territoires-de-bon-enfant.php">Les nouveaux territoires de Bon Enfant</a></li>
             <li>La Presse - 1 octobre 2021 : <a href="https://www.lapresse.ca/covid-19/2021-10-01/passeport-vaccinal/un-facteur-de-motivation-indeniable.php">Passeport vaccinal - Un facteur de motivation « indéniable »</a></li>
             <li>La Presse - 27 septembre 2021 : <a href="https://www.lapresse.ca/arts/theatre/2021-09-27/les-filles-du-saint-laurent-s-en-va-a-paris.php">Les filles du Saint-Laurent s’en va à Paris</a></li>
             <li>La Presse - 24 septembre 2021 : <a href="https://www.lapresse.ca/affaires/2021-09-24/primes-pour-les-infirmieres/les-agences-de-placement-sur-le-qui-vive.php">Les agences de placement sur le qui-vive</a></li>
