--- a/publications.html
+++ b/publications.html
@@ -38,6 +38,7 @@ Hello i'm Phil Boivin!
         <p>
           <ul class="list">
 
+            <li>La Presse - 4 octobre 2021 : <a href="https://www.lapresse.ca/societe/2021-10-04/grossophobie/le-monde-nous-deteste.php#">Grossophobie « Le monde nous déteste »</a></li>
             <li>La Presse - 2 octobre 2021 : <a href="https://www.lapresse.ca/covid-19/2021-10-02/les-canadiens-appuient-massivement-le-passeport-vaccinal.php">Les Canadiens appuient massivement le passeport vaccinal</a></li>
             <li>La Presse - 2 octobre 2021 : <a href="https://www.lapresse.ca/arts/musique/2021-10-02/les-nouveaux-territoires-de-bon-enfant.php">Les nouveaux territoires de Bon Enfant</a></li>
             <li>La Presse - 1 octobre 2021 : <a href="https://www.lapresse.ca/covid-19/2021-10-01/passeport-vaccinal/un-facteur-de-motivation-indeniable.php">Passeport vaccinal - Un facteur de motivation « indéniable »</a></li>
