--- a/publications.html
+++ b/publications.html
@@ -36,19 +36,20 @@ Hello i'm Phil Boivin!
         <h1>Dernières publications</h1>
 
         <p>
+          <h2>La Presse</h2>
           <ul class="list">
 
-            <li>La Presse - 4 octobre 2021 : <a href="https://www.lapresse.ca/societe/2021-10-04/grossophobie/le-monde-nous-deteste.php#">Grossophobie « Le monde nous déteste »</a></li>
-            <li>La Presse - 2 octobre 2021 : <a href="https://www.lapresse.ca/covid-19/2021-10-02/les-canadiens-appuient-massivement-le-passeport-vaccinal.php">Les Canadiens appuient massivement le passeport vaccinal</a></li>
-            <li>La Presse - 2 octobre 2021 : <a href="https://www.lapresse.ca/arts/musique/2021-10-02/les-nouveaux-territoires-de-bon-enfant.php">Les nouveaux territoires de Bon Enfant</a></li>
-            <li>La Presse - 1 octobre 2021 : <a href="https://www.lapresse.ca/covid-19/2021-10-01/passeport-vaccinal/un-facteur-de-motivation-indeniable.php">Passeport vaccinal - Un facteur de motivation « indéniable »</a></li>
-            <li>La Presse - 27 septembre 2021 : <a href="https://www.lapresse.ca/arts/theatre/2021-09-27/les-filles-du-saint-laurent-s-en-va-a-paris.php">Les filles du Saint-Laurent s’en va à Paris</a></li>
-            <li>La Presse - 24 septembre 2021 : <a href="https://www.lapresse.ca/affaires/2021-09-24/primes-pour-les-infirmieres/les-agences-de-placement-sur-le-qui-vive.php">Les agences de placement sur le qui-vive</a></li>
-            <li>La Presse - 14 septembre 2021 : <a href="https://www.lapresse.ca/societe/2021-09-14/infertilite-traverser-la-tempete/une-impression-de-solitude.php">Infertilité : traverser la tempête</a></li>
-            <li>La Presse - 9 septembre 2021 : <a href="https://www.lapresse.ca/affaires/2021-09-09/quand-la-philanthropie-danse-avec-la-covid-19.php">Quand la philanthropie danse avec la COVID-19</a></li>
-            <li>La Presse - 7 septembre 2021 : <a href="https://www.lapresse.ca/arts/musique/2021-09-07/metallica/le-black-album-vu-par.php">Metallica : Le Black Album vu par…</a></li>
-            <li>La Presse - 3 septembre 2021 : <a href="https://www.lapresse.ca/voyage/quebec-et-canada/2021-09-03/la-lune-s-invite-aux-jardins-de-lumiere.php">La lune s’invite aux Jardins de lumière</a></li>
-            <li>La Presse - 2 septembre 2021 : <a href="https://www.lapresse.ca/affaires/2021-09-02/assurances-collectives/les-assureurs-craignent-l-anxiete-liee-au-retour-au-bureau.php">Les assureurs craignent l’anxiété liée au retour au bureau</a></li>
+            <li><a href="https://www.lapresse.ca/societe/2021-10-04/grossophobie/le-monde-nous-deteste.php#">Grossophobie « Le monde nous déteste »</a> <span class="date">(4 octobre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/covid-19/2021-10-02/les-canadiens-appuient-massivement-le-passeport-vaccinal.php">Les Canadiens appuient massivement le passeport vaccinal</a> <span class="date">(2 octobre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/arts/musique/2021-10-02/les-nouveaux-territoires-de-bon-enfant.php">Les nouveaux territoires de Bon Enfant</a> <span class="date">(2 octobre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/covid-19/2021-10-01/passeport-vaccinal/un-facteur-de-motivation-indeniable.php">Passeport vaccinal - Un facteur de motivation « indéniable »</a> <span class="date">(1 octobre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/arts/theatre/2021-09-27/les-filles-du-saint-laurent-s-en-va-a-paris.php">Les filles du Saint-Laurent s’en va à Paris</a> <span class="date">(27 septembre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/affaires/2021-09-24/primes-pour-les-infirmieres/les-agences-de-placement-sur-le-qui-vive.php">Les agences de placement sur le qui-vive</a> <span class="date">(14 septembre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/societe/2021-09-14/infertilite-traverser-la-tempete/une-impression-de-solitude.php">Infertilité : traverser la tempête</a> <span class="date">(4 octobre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/affaires/2021-09-09/quand-la-philanthropie-danse-avec-la-covid-19.php">Quand la philanthropie danse avec la COVID-19</a> <span class="date">(9 septembre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/arts/musique/2021-09-07/metallica/le-black-album-vu-par.php">Metallica : Le Black Album vu par…</a> <span class="date">(7 septembre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/voyage/quebec-et-canada/2021-09-03/la-lune-s-invite-aux-jardins-de-lumiere.php">La lune s’invite aux Jardins de lumière</a> <span class="date">(3 septembre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/affaires/2021-09-02/assurances-collectives/les-assureurs-craignent-l-anxiete-liee-au-retour-au-bureau.php">Les assureurs craignent l’anxiété liée au retour au bureau</a> <span class="date">(2 septembre 2021)</span></li>
           </ul>
         </p>
 
