--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,8 @@ Hello i'm Phil Boivin!
           <h2>La Presse</h2>
           <ul class="list">
 
-            <li><a href="https://www.lapresse.ca/societe/2021-10-04/grossophobie/le-monde-nous-deteste.php#">Grossophobie « Le monde nous déteste »</a> <span class="date">(4 octobre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/sports/chroniques/2021-10-07/hockey-mineur/penurie-majeure-d-arbitres-au-quebec.php">Pénurie majeure d’arbitres au Québec</a> <span class="date">(7 octobre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/societe/2021-10-04/grossophobie/le-monde-nous-deteste.php">Grossophobie « Le monde nous déteste »</a> <span class="date">(4 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/covid-19/2021-10-02/les-canadiens-appuient-massivement-le-passeport-vaccinal.php">Les Canadiens appuient massivement le passeport vaccinal</a> <span class="date">(2 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/arts/musique/2021-10-02/les-nouveaux-territoires-de-bon-enfant.php">Les nouveaux territoires de Bon Enfant</a> <span class="date">(2 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/covid-19/2021-10-01/passeport-vaccinal/un-facteur-de-motivation-indeniable.php">Passeport vaccinal - Un facteur de motivation « indéniable »</a> <span class="date">(1 octobre 2021)</span></li>
