--- a/publications.html
+++ b/publications.html
@@ -39,6 +39,9 @@ Hello i'm Phil Boivin!
           <h2>La Presse</h2>
           <ul class="list">
 
+
+            <li><a href="https://www.lapresse.ca/arts/spectacles/2021-10-09/tournee-americana/roch-voisine-voyage-leger.php">Roch Voisine voyage léger</a> <span class="date">(9 octobre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/affaires/portfolio/2021-10-07/transformation-numerique/vyoo-en-avance-sur-les-geants-du-numerique.php">VyoO : en avance sur les géants du numérique</a> <span class="date">(7 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/sports/chroniques/2021-10-07/hockey-mineur/penurie-majeure-d-arbitres-au-quebec.php">Pénurie majeure d’arbitres au Québec</a> <span class="date">(7 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/actualites/education/2021-10-04/eleves-en-difficulte/l-aide-directe-avant-les-diagnostics-en-serie.php">L’aide directe avant les « diagnostics en série »</a> <span class="date">(4 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/societe/2021-10-04/grossophobie/le-monde-nous-deteste.php">Grossophobie « Le monde nous déteste »</a> <span class="date">(4 octobre 2021)</span></li>
