--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,15 @@ Hello i'm Phil Boivin!
           <h2>La Presse</h2>
           <ul class="list">
 
-
+            <li><a href="https://www.lapresse.ca/covid-19/2021-10-15/faux-certificats-de-vaccination-vrai-stratageme.php">Faux certificats de vaccination, vrai stratagème</a> <span class="date">(15 octobre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/actualites/sante/2021-10-14/punie-pour-avoir-refuse-des-heures-supplementaires-obligatoires.php">Punie pour avoir refusé des heures supplémentaires obligatoires</a> <span class="date">(14 octobre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/cinema/2021-10-13/premiere-quebecoise-des-oiseaux-ivres.php">Première québécoise des Oiseaux ivres</a> <span class="date">(13 octobre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/maison/decoration/2021-10-13/chasse-aux-tresors-a-stanstead.php">Chasse aux trésors à Stanstead</a> <span class="date">(13 octobre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/actualites/2021-10-12/crise-du-logement/je-ne-veux-pas-qu-on-se-retrouve-a-la-rue.php">« Je ne veux pas qu’on se retrouve à la rue »</a> <span class="date">(12 octobre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/actualites/2021-10-11/adolescente-happee-mortellement-dans-le-centre-du-quebec/tu-es-partie-trop-tot.php">Adolescente happée mortellement dans le Centre-du-Québec</a> <span class="date">(11 octobre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/sports/chroniques/2021-10-11/colleges-bishop-et-stanstead/rivaux-depuis-plus-d-un-siecle.php">Collèges Bishop et Stanstead - Rivaux depuis plus d’un siècle</a> <span class="date">(11 octobre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/actualites/environnement/2021-10-11/planete-bleue-idees-vertes/un-peu-de-biere-dans-vos-muffins.php">Un peu de bière dans vos muffins ?</a> <span class="date">(11 octobre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/affaires/pme/2021-10-11/univers-pme/un-premier-bimoteur-a-reaction-pour-airmedic.php">Un premier bimoteur à réaction pour Airmedic</a> <span class="date">(11 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/arts/spectacles/2021-10-09/tournee-americana/roch-voisine-voyage-leger.php">Roch Voisine voyage léger</a> <span class="date">(9 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/affaires/portfolio/2021-10-07/transformation-numerique/vyoo-en-avance-sur-les-geants-du-numerique.php">VyoO : en avance sur les géants du numérique</a> <span class="date">(7 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/sports/chroniques/2021-10-07/hockey-mineur/penurie-majeure-d-arbitres-au-quebec.php">Pénurie majeure d’arbitres au Québec</a> <span class="date">(7 octobre 2021)</span></li>
@@ -56,7 +64,12 @@ Hello i'm Phil Boivin!
             <li><a href="https://www.lapresse.ca/voyage/quebec-et-canada/2021-09-03/la-lune-s-invite-aux-jardins-de-lumiere.php">La lune s’invite aux Jardins de lumière</a> <span class="date">(3 septembre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/affaires/2021-09-02/assurances-collectives/les-assureurs-craignent-l-anxiete-liee-au-retour-au-bureau.php">Les assureurs craignent l’anxiété liée au retour au bureau</a> <span class="date">(2 septembre 2021)</span></li>
           </ul>
+
         </p>
+
+          <p>
+            Voir les archives sur <a href="https://www.lapresse.ca/recherche?q=Philippe+Boivin#gsc.tab=0&gsc.q=Philippe%20Boivin&gsc.sort=date">La Presse</a>.
+          </p>
 
       </div>
 
