--- a/publications.html
+++ b/publications.html
@@ -39,6 +39,46 @@ Hello i'm Phil Boivin!
           <h2>La Presse</h2>
           <ul class="list">
 
+
+            <li><a href="https://www.lapresse.ca/sports/soccer/2021-10-25/soccer-feminin/les-championnes-olympiques-s-attendent-a-un-bel-accueil-a-montreal.php">Les championnes olympiques s’attendent à un bel accueil à Montréal</a> <span class="date">(25 octobre 2021)</span></li>
+
+            <li><a href="https://www.lapresse.ca/actualites/chroniques/2021-10-25/quelque-chose-clochait.php">Quelque chose clochait</a> <span class="date">(25 octobre 2021)</span></li>
+
+            <li><a href="https://www.lapresse.ca/actualites/2021-10-24/enfants-victimes-de-violence-sexuelle/quand-la-lumiere-jaillit-du-drame.php">Quand la lumière jaillit du drame</a> <span class="date">(24 octobre 2021)</span></li>
+
+            <li><a href="https://www.lapresse.ca/societe/2021-10-24/la-spontaneite-retrouvee.php">La spontanéité retrouvée</a> <span class="date">(24 octobre 2021)</span></li>
+
+            <li><a href="https://www.lapresse.ca/gourmand/restaurants/2021-10-24/critique-resto/fleurs-cadeaux-joli-bouquet.php">Fleurs & Cadeaux : joli bouquet</a> <span class="date">(24 octobre 2021)</span></li>
+
+            <li><a href="https://www.lapresse.ca/actualites/grand-montreal/2021-10-24/denis-coderre-veut-une-ville-plus-inclusive-et-ouverte.php">Denis Coderre veut une ville plus inclusive et ouverte</a> <span class="date">(24 octobre 2021)</span></li>
+
+            <li><a href="https://www.lapresse.ca/actualites/grand-montreal/2021-10-23/un-parc-commemoratif-pour-la-communaute-irlandaise-promet-projet-montreal.php">Un parc commémoratif pour la communauté irlandaise, promet Projet Montréal</a> <span class="date">(23 octobre 2021)</span></li>
+
+            <li><a href="https://www.lapresse.ca/arts/musique/2021-10-23/etienne-coppee/eloge-de-la-lenteur.php">Étienne Coppée : Éloge de la lenteur</a> <span class="date">(23 octobre 2021)</span></li>
+
+            <li><a href="https://www.lapresse.ca/maison/chroniques/2021-10-23/les-heritieres-du-patrimoine.php">Les héritières du patrimoine</a> <span class="date">(23 octobre 2021)</span></li>
+
+            <li><a href="https://www.lapresse.ca/arts/spectacles/2021-10-22/creature-a-l-olympia/et-dieu-crea-rita.php">Et Dieu créa Rita !</a> <span class="date">(22 octobre 2021)</span></li>
+
+            <li><a href="https://www.lapresse.ca/actualites/grand-montreal/2021-10-22/elections-municipales/plus-de-sport-et-de-culture-pour-jeunes-et-aines-promet-coderre.php">Plus de sport et de culture pour jeunes et aînés, promet Coderre</a> <span class="date">(22 octobre 2021)</span></li>
+
+            <li><a href="https://www.lapresse.ca/arts/2021-10-22/les-boites-de-nuit-mises-au-pied-du-mur.php">Les boîtes de nuit mises au pied du mur</a> <span class="date">(22 octobre 2021)</span></li>
+
+            <li><a href="https://www.lapresse.ca/covid-19/2021-10-21/vaccination-des-5-a-11-ans/des-parents-quebecois-toujours-hesitants.php">Des parents québécois toujours hésitants</a> <span class="date">(21 octobre 2021)</span></li>
+
+            <li><a href="https://www.lapresse.ca/arts/litterature/2021-10-20/catherine-perrin/celebrer-les-liens-plus-forts-que-tout.php">Catherine Perrin : Célébrer les liens plus forts que tout</a> <span class="date">(20 octobre 2021)</span></li>
+           
+
+            <li><a href="https://www.lapresse.ca/arts/television/2021-10-19/les-imposteurs/rachid-badouri-en-confiance.php">Rachid Badouri en confiance</a> <span class="date">(19 octobre 2021)</span></li>
+
+            <li><a href="https://www.lapresse.ca/covid-19/2021-10-18/une-nouvelle-preuve-vaccinale-pour-voyager-hors-quebec.php">Une nouvelle preuve vaccinale pour voyager hors Québec</a> <span class="date">(18 octobre 2021)</span></li>
+
+            <li><a href="https://www.lapresse.ca/actualites/2021-10-17/defi-chaine-de-vie/gravir-des-montagnes-pour-sensibiliser-au-don-d-organes.php">Gravir des montagnes pour sensibiliser au don d’organes</a> <span class="date">(17 octobre 2021)</span></li>
+
+            <li><a href="https://www.lapresse.ca/contexte/2021-10-17/reforme-du-droit-familial/la-famille-nucleaire-explose.php">La famille nucléaire explose</a> <span class="date">(17 octobre 2021)</span></li>
+
+            <li><a href="https://www.lapresse.ca/actualites/justice-et-faits-divers/2021-10-16/montreal/une-femme-blessee-par-arme-blanche-dans-un-immeuble-commercial.php">Une femme blessée par arme blanche dans un immeuble commercial</a> <span class="date">(16 octobre 2021)</span></li>
+
             <li><a href="https://www.lapresse.ca/covid-19/2021-10-15/faux-certificats-de-vaccination-vrai-stratageme.php">Faux certificats de vaccination, vrai stratagème</a> <span class="date">(15 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/actualites/sante/2021-10-14/punie-pour-avoir-refuse-des-heures-supplementaires-obligatoires.php">Punie pour avoir refusé des heures supplémentaires obligatoires</a> <span class="date">(14 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/cinema/2021-10-13/premiere-quebecoise-des-oiseaux-ivres.php">Première québécoise des Oiseaux ivres</a> <span class="date">(13 octobre 2021)</span></li>
