--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Hello i'm Phil Boivin!
 
           <h1>Bonjour / Hi</h1> 
           <p>
-          Je suis Philippe. Un photographe, vidéaste et pilote de drone montréalais au service des humains (et de certains robots).
+          Je suis Philippe. Un photographe et pilote de drone montréalais au service des humains (et de certains robots).
           <br>
           Je vous invite à visiter mon <a href="/portfolio.html">portfolio</a> pour en savoir plus.
           <br>
@@ -67,7 +67,6 @@ Hello i'm Phil Boivin!
           <h2>Quoi de neuf?</h2> 
 
           <ul class="list">
-            <li>Photos de la nouvelle épicerie <a href="blogue/2021-09-22-delices-des-dunes.html">Délices des Dunes</a></li>
             <li>Nouvelle section <a href="publications.html">Publications</a></li>
             <li>Je suis disponible comme photojournaliste, <a href="contact.html">contactez-moi</a></li>
           </ul>
