--- a/apropos.html
+++ b/apropos.html
@@ -37,7 +37,7 @@ Hello i'm Phil Boivin!
         <h1>À propos</h1>
 
         <p>
-        Philippe Boivin est un photographe, vidéaste et pilote de drone pratiquant à Montréal. Il explore l’imagerie numérique depuis le début des années 2000. À travers ses objectifs, il préconise une approche constructive et créative afin de créer des images éloquentes et authentiques. Rigoureux et très curieux, il est constamment à la recherche de nouveaux projets.
+        Philippe Boivin est un photographe et pilote de drone pratiquant à Montréal. Il explore l’imagerie numérique depuis le début des années 2000. À travers ses objectifs, il préconise une approche constructive et créative afin de créer des images éloquentes et authentiques. Rigoureux et très curieux, il est constamment à la recherche de nouveaux projets.
         </p>
 
         <p>
