--- a/publications.html
+++ b/publications.html
@@ -33,25 +33,58 @@ Hello i'm Phil Boivin!
     <div class="row">
       <div class="col">
 
-        <h1>Dernières publications</h1>
+        <h1>Quelques publications</h1>
 
         <p>
           <h2>La Presse</h2>
           <ul class="list">
 
-            <li><a href="https://www.lapresse.ca/covid-19/2021-10-15/faux-certificats-de-vaccination-vrai-stratageme.php">Faux certificats de vaccination, vrai stratagème</a> <span class="date">(15 octobre 2021)</span></li>
+            <li><a href="https://www.lapresse.ca/actualites/national/2021-11-08/reouverture-de-la-frontiere/ca-fait-deux-ans-qu-on-attend-ca.php">Réouverture de la frontière « Ça fait deux ans qu’on attend ça »</a> <span class="date">(8 novembre 2021)</span></li>
+
+            <li><a href="https://www.lapresse.ca/affaires/pme/2021-11-08/univers-pme/le-specialiste-montrealais-du-tapis-d-avion-se-pose-en-alabama.php">Le spécialiste montréalais du tapis d’avion se pose en Alabama</a> <span class="date">(8 novembre 2021)</span></li>
+
+             <li><a href="https://www.lapresse.ca/societe/sante/2021-11-07/mission-apprendre-a-bouger.php">Mission : apprendre à bouger</a> <span class="date">(7 novembre 2021)</span></li>
+
+            <li><a href="https://www.lapresse.ca/actualites/grand-montreal/2021-11-05/elections-municipales/trois-chefs-en-campagne.php">Trois chefs en campagne</a> <span class="date">(5 novembre 2021)</span></li>
+
+            <li><a href="https://www.lapresse.ca/gourmand/restaurants/2021-11-04/buvette-pastek-le-fruit-etait-mur.php">Buvette Pastek : le fruit était mûr !</a> <span class="date">(4 novembre 2021)</span></li>
+
+            <li><a href="https://www.lapresse.ca/gourmand/restaurants/2021-11-04/le-retour-du-toque.php">Le retour du Toqué !</a> <span class="date">(4 novembre 2021)</span></li>
+
+             <li><a href="https://www.lapresse.ca/arts/arts-visuels/2021-11-04/mariana-mazza-artiste-peintre.php">Mariana Mazza, artiste peintre</a> <span class="date">(4 novembre 2021)</span></li>
+
+
+             <li><a href="https://www.lapresse.ca/sports/soccer/2021-10-27/les-cinq-changements-par-match-deviendraient-permanents.php">Les cinq changements par match deviendraient permanents</a> <span class="date">(27 octobre 2021)</span></li>
+
+             <li><a href="https://www.lapresse.ca/actualites/chroniques/2021-11-02/l-explication-illogique-du-candidat-coderre.php">L’explication illogique du candidat Coderre</a> <span class="date">(2 novembre 2021)</span></li>
+
+             <li><a href="https://www.lapresse.ca/sports/sports-d-hiver/2021-11-04/les-soeurs-dufour-lapointe/tissees-serrees-jusqu-au-bout.php">Les sœurs Dufour-Lapointe - Tissées serrées jusqu’au bout</a> <span class="date">(4 novembre 2021)</span></li>
+
+             <li><a href="https://www.lapresse.ca/debats/editoriaux/2021-11-02/montreal-meritait-une-troisieme-voie.php">Montréal méritait une troisième voie</a> <span class="date">(2 novembre 2021)</span></li>
+
+             <li><a href="https://www.lapresse.ca/actualites/grand-montreal/2021-11-02/entrevue-editoriale-avec-balarama-holness/ma-bataille-pour-les-enjeux-linguistiques-c-est-une-rebellion.php">Entrevue éditoriale avec Balarama Holness</a> <span class="date">(2 novembre 2021)</span></li>
+
+             <li><a href="https://www.lapresse.ca/actualites/chroniques/2021-10-25/quelque-chose-clochait.php">Quelque chose clochait</a> <span class="date">(25 octobre 2021)</span></li>
+
+             <li><a href="https://www.lapresse.ca/sports/soccer/2021-10-25/soccer-feminin/les-championnes-olympiques-s-attendent-a-un-bel-accueil-a-montreal.php">Les championnes olympiques s’attendent à un bel accueil à Montréal</a> <span class="date">(25 octobre 2021)</span></li>
+
+             <li><a href="https://www.lapresse.ca/arts/spectacles/2021-10-22/creature-a-l-olympia/et-dieu-crea-rita.php">Et Dieu créa Rita !</a> <span class="date">(22 octobre 2021)</span></li>
+
+             <li><a href="https://www.lapresse.ca/arts/television/2021-10-19/les-imposteurs/rachid-badouri-en-confiance.php">Rachid Badouri en confiance</a> <span class="date">(19 octobre 2021)</span></li>
+
+             <li><a href="https://www.lapresse.ca/actualites/grand-montreal/2021-10-17/candidate-impliquee-dans-un-scandale-financier/denis-coderre-estime-qu-il-n-y-a-pas-de-probleme.php">Denis Coderre estime qu’il n’y a « pas de problème »</a> <span class="date">(17 octobre 2021)</span></li>
+
+             <li><a href="https://www.lapresse.ca/actualites/grand-montreal/2021-10-16/personnes-en-situation-de-handicap/projet-montreal-veut-rendre-la-metropole-plus-accessible.php">Projet Montréal veut rendre la métropole plus accessible</a> <span class="date">(16 octobre 2021)</span></li>
+
             <li><a href="https://www.lapresse.ca/actualites/sante/2021-10-14/punie-pour-avoir-refuse-des-heures-supplementaires-obligatoires.php">Punie pour avoir refusé des heures supplémentaires obligatoires</a> <span class="date">(14 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/cinema/2021-10-13/premiere-quebecoise-des-oiseaux-ivres.php">Première québécoise des Oiseaux ivres</a> <span class="date">(13 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/maison/decoration/2021-10-13/chasse-aux-tresors-a-stanstead.php">Chasse aux trésors à Stanstead</a> <span class="date">(13 octobre 2021)</span></li>
-            <li><a href="https://www.lapresse.ca/actualites/2021-10-12/crise-du-logement/je-ne-veux-pas-qu-on-se-retrouve-a-la-rue.php">« Je ne veux pas qu’on se retrouve à la rue »</a> <span class="date">(12 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/actualites/2021-10-11/adolescente-happee-mortellement-dans-le-centre-du-quebec/tu-es-partie-trop-tot.php">Adolescente happée mortellement dans le Centre-du-Québec</a> <span class="date">(11 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/sports/chroniques/2021-10-11/colleges-bishop-et-stanstead/rivaux-depuis-plus-d-un-siecle.php">Collèges Bishop et Stanstead - Rivaux depuis plus d’un siècle</a> <span class="date">(11 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/actualites/environnement/2021-10-11/planete-bleue-idees-vertes/un-peu-de-biere-dans-vos-muffins.php">Un peu de bière dans vos muffins ?</a> <span class="date">(11 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/affaires/pme/2021-10-11/univers-pme/un-premier-bimoteur-a-reaction-pour-airmedic.php">Un premier bimoteur à réaction pour Airmedic</a> <span class="date">(11 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/arts/spectacles/2021-10-09/tournee-americana/roch-voisine-voyage-leger.php">Roch Voisine voyage léger</a> <span class="date">(9 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/affaires/portfolio/2021-10-07/transformation-numerique/vyoo-en-avance-sur-les-geants-du-numerique.php">VyoO : en avance sur les géants du numérique</a> <span class="date">(7 octobre 2021)</span></li>
-            <li><a href="https://www.lapresse.ca/sports/chroniques/2021-10-07/hockey-mineur/penurie-majeure-d-arbitres-au-quebec.php">Pénurie majeure d’arbitres au Québec</a> <span class="date">(7 octobre 2021)</span></li>
-            <li><a href="https://www.lapresse.ca/actualites/education/2021-10-04/eleves-en-difficulte/l-aide-directe-avant-les-diagnostics-en-serie.php">L’aide directe avant les « diagnostics en série »</a> <span class="date">(4 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/societe/2021-10-04/grossophobie/le-monde-nous-deteste.php">Grossophobie « Le monde nous déteste »</a> <span class="date">(4 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/covid-19/2021-10-02/les-canadiens-appuient-massivement-le-passeport-vaccinal.php">Les Canadiens appuient massivement le passeport vaccinal</a> <span class="date">(2 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/arts/musique/2021-10-02/les-nouveaux-territoires-de-bon-enfant.php">Les nouveaux territoires de Bon Enfant</a> <span class="date">(2 octobre 2021)</span></li>
@@ -60,9 +93,7 @@ Hello i'm Phil Boivin!
             <li><a href="https://www.lapresse.ca/affaires/2021-09-24/primes-pour-les-infirmieres/les-agences-de-placement-sur-le-qui-vive.php">Les agences de placement sur le qui-vive</a> <span class="date">(14 septembre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/societe/2021-09-14/infertilite-traverser-la-tempete/une-impression-de-solitude.php">Infertilité : traverser la tempête</a> <span class="date">(4 octobre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/affaires/2021-09-09/quand-la-philanthropie-danse-avec-la-covid-19.php">Quand la philanthropie danse avec la COVID-19</a> <span class="date">(9 septembre 2021)</span></li>
-            <li><a href="https://www.lapresse.ca/arts/musique/2021-09-07/metallica/le-black-album-vu-par.php">Metallica : Le Black Album vu par…</a> <span class="date">(7 septembre 2021)</span></li>
             <li><a href="https://www.lapresse.ca/voyage/quebec-et-canada/2021-09-03/la-lune-s-invite-aux-jardins-de-lumiere.php">La lune s’invite aux Jardins de lumière</a> <span class="date">(3 septembre 2021)</span></li>
-            <li><a href="https://www.lapresse.ca/affaires/2021-09-02/assurances-collectives/les-assureurs-craignent-l-anxiete-liee-au-retour-au-bureau.php">Les assureurs craignent l’anxiété liée au retour au bureau</a> <span class="date">(2 septembre 2021)</span></li>
           </ul>
 
         </p>
