--- a/publications.html
+++ b/publications.html
@@ -99,7 +99,7 @@ Hello i'm Phil Boivin!
         </p>
 
           <p>
-            Voir les archives sur <a href="https://www.lapresse.ca/recherche?q=Philippe+Boivin#gsc.tab=0&gsc.q=Philippe%20Boivin&gsc.sort=date">La Presse</a>.
+            Voir les archives sur <a href="https://www.lapresse.ca/recherche?q=%22Philippe+Boivin%22#gsc.tab=0&gsc.q=%22Philippe%20Boivin%22&gsc.sort=date">La Presse</a>.
           </p>
 
       </div>
