--- a/index.html
+++ b/index.html
@@ -51,11 +51,9 @@ Hello i'm Phil Boivin!
 
           <h1>Bonjour / Hi</h1> 
           <p>
-          Je suis Philippe. Un photographe et pilote de drone montréalais au service des humains (et de certains robots).
+          Je suis Philippe. Un photographe montréalais au service des humains (et de certains robots).
           <br>
-          Je vous invite à visiter mon <a href="/portfolio.html">portfolio</a> pour en savoir plus.
-          <br>
-          (English version is coming soon!)
+          Je vous invite à visiter mon <a href="/portfolio.html">portfolio</a> pour en savoir plus. (English version is coming soon!)
           </p>
      
         </div>
@@ -67,8 +65,8 @@ Hello i'm Phil Boivin!
           <h2>Quoi de neuf?</h2> 
 
           <ul class="list">
-            <li>Nouvelle section <a href="publications.html">Publications</a></li>
-            <li>Je suis disponible comme photojournaliste, <a href="contact.html">contactez-moi</a></li>
+            <li>Je suis collaborateur à La Presse, consultez mes dernières <a href="publications.html">publications</a>.</li>
+            <li>Je suis disponible comme photojournaliste, <a href="contact.html">contactez-moi</a>.</li>
           </ul>
         
 
