--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Hello i'm Phil Boivin!
           <h2>Quoi de neuf?</h2> 
 
           <ul class="list">
-            <li>Je suis collaborateur à La Presse, consultez mes dernières <a href="publications.html">publications</a>.</li>
+            <li>Je suis collaborateur à <a href="https://www.lapresse.ca">La Presse</a>, consultez mes dernières <a href="publications.html">publications</a>.</li>
             <li>Je suis disponible comme photojournaliste, <a href="contact.html">contactez-moi</a>.</li>
           </ul>
         
