--- a/fr/apropos.html
+++ b/fr/apropos.html
@@ -36,12 +36,14 @@ Hello i'm Phil Boivin!
         </p>
         
         <p>
-        Rigoureux et très curieux, il est constamment à la recherche de nouveaux projets éditoriaux ou reliés à l'actualité.
+        Créatif, rigoureux et très curieux, il est constamment à la recherche de nouveaux projets éditoriaux ou reliés à l'actualité.
         </p>
 
         <p>
         Philippe est titulaire d’un diplôme en photographie de l’Université Concordia de Montréal et possède une certification avancée comme pilote de drone au Canada.
         </p>
+
+        <a href="contact.html">Contactez</a> Philippe pour en savoir plus.
 
       </div>
 
