csv source update

--- a/fr/etc.html
+++ b/fr/etc.html
@@ -106,20 +106,15 @@ Hello i'm Phil Boivin!
 
 <script>
   
-  // var csvEvent = '/csv/phil-boivin-evenements.csv';
-  var csvEvent = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTntSEyC_ayVeSc8uebcvVfCFd9EkHJ4VK5gTpoR6iNmwsGRWgDcBF59bRIbBPqVfESxngkC7F8krBM/pub?gid=130601549&single=true&output=csv';
+  var csvEvent = '/csv/phil-boivin-evenements.csv';
   var idEvent = "#galEvent";
   displayGallery(csvEvent, idEvent);
 
-  // var csvImmo = '/csv/phil-boivin-immobilier.csv';
-  var csvImmo = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTntSEyC_ayVeSc8uebcvVfCFd9EkHJ4VK5gTpoR6iNmwsGRWgDcBF59bRIbBPqVfESxngkC7F8krBM/pub?gid=639037139&single=true&output=csv';
+  var csvImmo = '/csv/phil-boivin-immobilier.csv';
   var idImmo = "#galImmo";
   displayGallery(csvImmo, idImmo);
 
-
-  //var csvPub = '/csv/phil-boivin-publicites.csv';
-  
-  var csvPub = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTntSEyC_ayVeSc8uebcvVfCFd9EkHJ4VK5gTpoR6iNmwsGRWgDcBF59bRIbBPqVfESxngkC7F8krBM/pub?gid=1217580290&single=true&output=csv';
+  var csvPub = '/csv/phil-boivin-publicites.csv';
   var idPub = "#galPub";
   displayGallery(csvPub, idPub);
 </script>
