--- a/fr/portraits.html
+++ b/fr/portraits.html
@@ -55,9 +55,7 @@ Hello i'm Phil Boivin!
 <script src="/js/pb.lib.js"></script>
 
 <script>
- 
-  var csv = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTntSEyC_ayVeSc8uebcvVfCFd9EkHJ4VK5gTpoR6iNmwsGRWgDcBF59bRIbBPqVfESxngkC7F8krBM/pub?gid=1804583752&single=true&output=csv';
-  // var csv = '/csv/phil-boivin-portraits.csv';
+  var csv = '/csv/phil-boivin-portraits.csv';
   var gallery = "#gallery";
   displayGallery(csv, gallery);
 </script>
