--- a/fr/presse.html
+++ b/fr/presse.html
@@ -37,7 +37,7 @@ Hello i'm Phil Boivin!
     L46.7070007,34.2929993z"/><path d="M32,0c-17.6730995,0-32,14.3268995-32,32s14.3268995,32,32,32c17.6731987,0,32-14.3269005,32-32S49.6731987,0,32,0z M32,2
     c16.542099,0,30,13.4580002,30,30c0,16.542099-13.457901,30-30,30s-30-13.457901-30-30C2.0000007,15.4580002,15.4579,2,32,2z"/></svg></a></div>
 
-    
+
    </div>
  </main>
 
@@ -58,8 +58,7 @@ Hello i'm Phil Boivin!
 <script src="/js/pb.lib.js"></script>
 
 <script>
-  var csv = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTntSEyC_ayVeSc8uebcvVfCFd9EkHJ4VK5gTpoR6iNmwsGRWgDcBF59bRIbBPqVfESxngkC7F8krBM/pub?gid=0&single=true&output=csv';
-  // var csv = '/csv/phil-boivin-presse.csv';
+  var csv = '/csv/phil-boivin-presse.csv';
   var gallery = "#gallery";
   displayGallery(csv, gallery);
 </script>
