Update Header + Footer
Static menu content for quicker loading time.

--- a/fr/inc/footer.html
+++ b/fr/inc/footer.html
@@ -2,17 +2,14 @@
    
    	<nav>
 
-      <ul id="footer-menu"></ul>
+      <ul id="footer-menu">
+        <li><a href="/fr/photos.html">Photos</a></li>
+        <li><a href="/fr/apropos.html">À propos</a></li>
+        <li><a href="/fr/publications.html">Publications</a></li>
+        <li><a href="/fr/contact.html">Contact</a></li>
+      </ul>
      
-		  <script> 
-
-			  $(function(){
-			    $("#footer-menu").load("/fr/inc/menu.html"); 
-			  });
-
-			</script> 
-			
-		</nav>
+	</nav>
 
     <div class="social-icons">
 
