--- a/fr/publications.html
+++ b/fr/publications.html
@@ -38,6 +38,8 @@ Hello i'm Phil Boivin!
           <h3>Actualités</h3>
           <ul class="list">
 
+            <li><a href="https://www.lapresse.ca/actualites/education/2022-02-10/des-ecoles-larguent-l-institut-confucius.php">Des écoles larguent l’Institut Confucius</a></li>
+
             <li><a href="https://www.lapresse.ca/covid-19/2021-11-30/les-voyageurs-craignent-un-retour-au-pays-complexe.php">Les voyageurs craignent un retour au pays complexe</a></li>
 
             <li><a href="https://www.lapresse.ca/actualites/grand-montreal/2021-11-12/agrandissement-du-palais-des-congres/23-millions-pour-les-anciens-batiments-de-steve-s.php">23 millions pour les anciens bâtiments de Steve’s</a></li>
