--- a/index.html
+++ b/index.html
@@ -67,10 +67,14 @@ Hello i'm Phil Boivin!
 
 <!-- Load shared HTML content -->
 <script> 
+$(document).ready(function(){
+
   $(function(){
     $("header").load("/fr/inc/header.html");
     $("footer").load("/fr/inc/footer.html");
   });
+
+}); 
 </script> 
 
 </body>
